--- a/app/src/App.css
+++ b/app/src/App.css
@@ -48,13 +48,14 @@
 .cta-button {
   height: 45px;
   border: 0;
-  width: auto;
+  width: 50%;
   padding-left: 40px;
   padding-right: 40px;
   border-radius: 10px;
   cursor: pointer;
   font-size: 16px;
   font-weight: bold;
+  align-self: center;
 }
 
 .connect-wallet-button {
